Updating the README.md with instructions to run the JMX example